final_approach_started

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .Rproj.user
+.Rproj
 .Rhistory
 .RData
 .Ruserdata
@@ -6,9 +7,11 @@ data
 dask-worker-space
 *.gz
 *.RDS
+*.rds
 *.fst
 *.json
 *.png
+*.pdf
 
 ML for ESKD/*.gz
 ML for ESKD/*.xlsx
@@ -16,5 +19,5 @@ ML for ESKD/*.tsv
 ML for ESKD/*.csv
 ML for ESKD/*.html
 ML for ESKD/*.txt
-ML for ESKD/cmv_analysis.Rmd
 
+ml_eskd_new/*
